Bottom gutter, fixed jumping

--- a/src/assets/css/app/app.less
+++ b/src/assets/css/app/app.less
@@ -24,12 +24,21 @@
   z-index: 1;
 }
 
+.xs-bottom-gutter {
+  margin-bottom: 1.5em;
+  @media (min-width: @screen-sm){
+    margin-bottom:12px;
+  }
+}
+
 #question, #answer {
-  margin: 84px 0;
+  margin: 84px 0 42px 0;
+  min-height: 120px;
   -webkit-transition: opacity 0.3s;
   -moz-transition: opacity 0.3s;
   transition: opacity 0.3s;
 }
+
 
 p.entry {
   line-height: 45px;
